# oxirs

./: .doctest-exclude  .gitignore  BUILD_STATUS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CORE_USAGE_POLICY.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.de.md  README.fr.md  README.ja.md  README.md  RELEASE_NOTES_BETA1.md  RELEASE_NOTES_BETA2.md  RELEASE_NOTES_RC1.md  SCIRS2_INTEGRATION_POLICY.md  SECURITY_AUDIT.md  TEST_COVERAGE_PLAN.md  TODO.md  docker-compose.yml  oxirs-ids.toml  oxirs-society5.toml  oxirs.toml  performance_validation.rs
ai/oxirs-chat/: Cargo.toml  DEPLOYMENT.md  Dockerfile  INTEGRATION_GUIDE.md  README.md  SCIRS2_ENHANCEMENTS.md  TODO.md  docker-compose.yml  prometheus.yml
ai/oxirs-chat/benches/: comprehensive_benchmarks.rs  dashboard_benchmarks.rs  rag_benchmarks.rs
ai/oxirs-chat/docs/: admin.md  tutorial.md
ai/oxirs-chat/examples/: advanced_features_demo.rs  chat_advanced_features_demo.rs  kg_chat.rs  rag_chat.rs  streaming_demo.rs
ai/oxirs-chat/src/: advanced_observability.rs  analytics.rs  analytics.rs.backup  cache.rs  chat.rs  chat_session.rs  collaboration.rs  collaboration_server.rs  context.rs  context_module.rs  context_window.rs  conversation_history.rs  conversation_state.rs  conversation_summarizer.rs  custom_prompts.rs  custom_tools.rs  dashboard.rs  dashboard_server.rs  dialogue_manager.rs  enterprise_integration.rs  error.rs  explanation.rs  exploration_guidance.rs  export.rs  external_services.rs  gpu_embedding_cache.rs  graph_exploration.rs  graph_exploration_analytics.rs  graph_exploration_tests.rs  graph_exploration_traversal.rs  graph_exploration_types.rs  health_monitoring.rs  i18n.rs  intent_classifier.rs  intent_detector.rs  knowledge_bases.rs  knowledge_retriever.rs  lib.rs  llm.rs  llm.rs.backup  (+42 more)
ai/oxirs-chat/tests/: examples_compile_test.rs  llm_fallback_tests.rs  llm_integration_test.rs  session_persistence_test.rs  vector_search_test.rs
ai/oxirs-embed/: Cargo.toml  Cargo_standalone.toml  DEPLOYMENT_GUIDE.md  FEATURES.md  README.md  SESSION_SUMMARY.md  TODO.md
ai/oxirs-embed/benches/: performance_validation.rs
ai/oxirs-embed/deploy/: Dockerfile  README.md  docker-compose.yml
ai/oxirs-embed/examples/: README.md  advanced_embedding_server.rs  advanced_features_demo.rs  advanced_visualization_demo.rs  basic_usage.rs  biomedical_embedding_demo.rs  clustering_demo.rs  comprehensive_benchmark.rs  conve_model_demo.rs  distributed_training_demo.rs  embed_advanced_features_demo.rs  embed_basic_usage.rs  fine_tuning_demo.rs  gpu_acceleration_demo.rs  hole_model_demo.rs  integrated_ai_platform_demo.rs  interpretability_demo.rs  link_prediction_demo.rs  load_pretrained.rs  model_persistence_demo.rs  model_selection_demo.rs  multimodal_embedding_demo.rs  performance_profiling_demo.rs  quick_start_guide.rs  sparql_extension_demo.rs  storage_backend_demo.rs  temporal_embeddings_demo.rs  vector_search_demo.rs
ai/oxirs-embed/src/: adaptive_learning.rs  advanced_profiler.rs  advanced_profiler_analyzer.rs  advanced_profiler_collector.rs  advanced_profiler_tests.rs  advanced_profiler_types.rs  api.rs  api_original.rs  application_tasks.rs  batch_encoder.rs  batch_processing.rs  biological_computing.rs  biomedical_embeddings.rs  caching.rs  causal_representation_learning.rs  cloud_integration.rs  (+123 more)
ai/oxirs-graphrag/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  TODO.md
ai/oxirs-physics/: Cargo.toml  README.md  TODO.md
ai/oxirs-shacl-ai/: Cargo.toml  README.md  TODO.md
core/oxirs-core/: ARCHITECTURE.md  BEST_PRACTICES.md  Cargo.toml  DEPLOYMENT.md  EXTRACTION.md  INTEGRATION_EXAMPLES.md  Maintenance.ttl  Movement.ttl  PERFORMANCE_GUIDE.md  README.md  TODO.md  TUTORIAL.md  api_baseline.json  perf_baseline.json
core/oxirs-gpu-monitor/: Cargo.toml
crates/zstd-shim/: Cargo.toml
desktop/oxirs-tauri/: Cargo.toml  README.md  tauri.conf.json
engine/oxirs-arq/: Cargo.toml  README.md  TODO.md  debug_tokens
engine/oxirs-geosparql/: BUFFER_GUIDE.md  CONTRIBUTING.md  Cargo.toml  ENHANCEMENTS_SUMMARY.md  PERFORMANCE.md  README.md  SESSION_SUMMARY.md  TODO.md
engine/oxirs-geosparql-adapter-geos/: Cargo.toml
engine/oxirs-rule/: Cargo.toml  ENHANCEMENTS_BETA4.md  README.md  SESSION_SUMMARY.md  TODO.md  run_benchmarks.sh
engine/oxirs-samm/: API_STABILITY.md  Cargo.toml  DTDL_COMPLETE_GUIDE.md  DTDL_GUIDE.md  MIGRATION_GUIDE.md  README.md  SAMM_CLI_COMPARISON.md  TODO.md
engine/oxirs-shacl/: COOKBOOK.md  Cargo.toml  README.md  SPEC_MAPPING.md  TODO.md
engine/oxirs-star/: API_REFERENCE.md  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  ECOSYSTEM.md  MIGRATION.md  PERFORMANCE.md  README.md  TODO.md  TROUBLESHOOTING.md
engine/oxirs-ttl/: Cargo.toml  PERFORMANCE.md  README.md  RELEASE_NOTES_BETA1.md  TODO.md
engine/oxirs-vec/: Cargo.toml  MULTIMODAL_FUSION.md  README.md  README_PYTHON.md  TANTIVY_INTEGRATION.md  TODO.md  build.rs  metadata.json  pyproject.toml
engine/oxirs-vec-adapter-cuda/: Cargo.toml  build.rs
performance_validation/: Cargo.toml  README.md
performance_validation/src/: lib.rs  main.rs  revolutionary_benchmarking_suite.rs
security/oxirs-did/: Cargo.toml  README.md  TODO.md
server/oxirs-fuseki/: BIND_VALUES_ENHANCEMENTS.md  Cargo.toml  DIGITAL_TWIN_QUICKSTART.md  Dockerfile  ENHANCED_AGGREGATIONS.md  FEATURES_BETA2.md  FEDERATED_QUERY_OPTIMIZATION.md  IDS_CERTIFICATION_GUIDE.md  LDAP_AD_INTEGRATION.md  MIGRATION_FROM_FUSEKI.md  OAUTH2_OIDC.md  PROPERTY_PATH_OPTIMIZATION.md  README.md  RELEASE_BETA2.md  RELEASE_NOTES.md  SPARQL_1_2_ENHANCEMENTS_SUMMARY.md  SPARQL_STAR_IMPLEMENTATION.md  TODO.md  WEBSOCKET_SUBSCRIPTIONS.md  api_baseline.json  oxirs-digital-twin.toml
server/oxirs-gql/: Cargo.toml  FEDERATION.md  README.md  TODO.md
storage/oxirs-cluster/: Cargo.toml  README.md  RELEASE_NOTES_v0.1.0-beta.1.md  TODO.md
storage/oxirs-tdb/: BENCHMARK_RESULTS.md  Cargo.toml  README.md  TODO.md  run_benchmarks.sh
storage/oxirs-tsdb/: Cargo.toml  README.md  TODO.md
storage/oxirs-tsdb-adapter-duckdb/: Cargo.toml
stream/oxirs-canbus/: Cargo.toml  README.md  TODO.md
(+6202 files in other folders)
