[workspace]
resolver = "2"
members = [
    "core/oxirs-core",
    "server/oxirs-fuseki",
    "server/oxirs-gql",
    "engine/oxirs-arq",
    "engine/oxirs-geosparql",
    "engine/oxirs-rule",
    "engine/oxirs-samm",
    "engine/oxirs-shacl",
    "engine/oxirs-star",
    "engine/oxirs-ttl",
    "engine/oxirs-vec",
    "storage/oxirs-tdb",
    "storage/oxirs-cluster",
    "stream/oxirs-stream",
    "stream/oxirs-federate",
    "ai/oxirs-embed",
    "ai/oxirs-shacl-ai",
    "ai/oxirs-chat",
    "ai/oxirs-physics",
    "ai/oxirs-graphrag",
    "security/oxirs-did",
    "platforms/oxirs-wasm",
    "stream/oxirs-modbus",
    "storage/oxirs-tsdb",
    "stream/oxirs-canbus",
    "tools/oxirs",
]
exclude = [
    "engine/oxirs-geosparql/fuzz",
    "engine/oxirs-ttl/fuzz",
]

[workspace.package]
version = "0.1.0"
authors = ["KitaSan <info@kitasan.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cool-japan/oxirs"
homepage = "https://github.com/cool-japan/oxirs"
description = "A Rust-native, modular platform for Semantic Web, SPARQL 1.2, GraphQL, and AI-augmented reasoning"
keywords = ["sparql", "rdf", "semantic-web", "graphql", "knowledge-graph"]
categories = ["database", "web-programming", "science"]
rust-version = "1.70"

[workspace.lints.clippy]
# Allow certain patterns common in large, evolving codebases
let_and_return = "allow"
new_without_default = "allow"
uninlined_format_args = "allow"
manual_clamp = "allow"
unwrap_or_default = "allow"

[workspace.lints.rust]
# Allow dead code as this is a large project with code written for future use
dead_code = "allow"
unused_imports = "allow"
unused_variables = "allow"
noop_method_call = "allow"
unsafe_code = "warn"

[workspace.dependencies]
# Internal OxiRS crates (version inherited from workspace.package)
oxirs-core = { version = "0.1.0", path = "core/oxirs-core" }
oxirs-fuseki = { version = "0.1.0", path = "server/oxirs-fuseki" }
oxirs-gql = { version = "0.1.0", path = "server/oxirs-gql" }
oxirs-arq = { version = "0.1.0", path = "engine/oxirs-arq" }
oxirs-geosparql = { version = "0.1.0", path = "engine/oxirs-geosparql" }
oxirs-rule = { version = "0.1.0", path = "engine/oxirs-rule" }
oxirs-samm = { version = "0.1.0", path = "engine/oxirs-samm" }
oxirs-shacl = { version = "0.1.0", path = "engine/oxirs-shacl" }
oxirs-star = { version = "0.1.0", path = "engine/oxirs-star" }
oxirs-ttl = { version = "0.1.0", path = "engine/oxirs-ttl" }
oxirs-vec = { version = "0.1.0", path = "engine/oxirs-vec" }
oxirs-tdb = { version = "0.1.0", path = "storage/oxirs-tdb" }
oxirs-cluster = { version = "0.1.0", path = "storage/oxirs-cluster" }
oxirs-stream = { version = "0.1.0", path = "stream/oxirs-stream" }
oxirs-federate = { version = "0.1.0", path = "stream/oxirs-federate" }
oxirs-embed = { version = "0.1.0", path = "ai/oxirs-embed" }
oxirs-shacl-ai = { version = "0.1.0", path = "ai/oxirs-shacl-ai" }
oxirs-chat = { version = "0.1.0", path = "ai/oxirs-chat" }
oxirs-physics = { version = "0.1.0", path = "ai/oxirs-physics" }
oxirs-graphrag = { version = "0.1.0", path = "ai/oxirs-graphrag" }
oxirs-did = { version = "0.1.0", path = "security/oxirs-did" }
oxirs-wasm = { version = "0.1.0", path = "platforms/oxirs-wasm" }
oxirs-modbus = { version = "0.1.0", path = "stream/oxirs-modbus" }
oxirs-tsdb = { version = "0.1.0", path = "storage/oxirs-tsdb" }
oxirs-canbus = { version = "0.1.0", path = "stream/oxirs-canbus" }

# Core RDF and SPARQL functionality (native OxiRS implementations)
# oxigraph = "0.4.11"  # REMOVED: Replaced with native implementations
# oxjsonld = "0.1.0"   # REMOVED: Replaced with native implementations
# oxrdf = "0.2.0"      # REMOVED: Replaced with native implementations
rio_api = "0.8"
rio_turtle = "0.8"
rio_xml = "0.8"

# Stable OxiGraph parser dependencies (v0.2.x/v0.3.x)
oxttl = "0.2.1"         # Turtle, N-Triples, N-Quads, TriG, N3 parsers
oxrdfxml = "0.2.1"      # RDF/XML parser
oxjsonld = "0.2.1"      # JSON-LD parser
oxrdf = "0.3"           # RDF data model (required by parsers)

# High-performance validation dependencies from oxrdf ecosystem
oxiri = "0.2"         # Fast IRI validation and parsing
oxilangtag = "0.1"    # Fast language tag validation
oxsdatatypes = "0.1"  # Fast XSD datatype validation and parsing

# Async runtime and HTTP
tokio = { version = "1.47.3", features = ["full"] }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.19", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# GraphQL
juniper = "0.17"
juniper_hyper = "0.10"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9"

# Error handling and logging
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Storage and persistence
rocksdb = "0.22"

# Text search
tantivy = "0.22"

# Vector search
hnsw_rs = "0.3"

# Streaming
rdkafka = "0.37"
async-nats = "0.45"

# Clustering
openraft = "0.9"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.7"
tempfile = "3.24"

# Additional dependencies
async-trait = "0.1"
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "rustls-native-certs", "json", "form", "query", "multipart", "http2"] }
bytes = "1.11"  # HTTP body handling
http = "1.4"    # HTTP types

# Arrow crates (temporarily disabled due to chrono compatibility issues)
# arrow = "53.4.0"
# arrow-array = "53.4.0"
# arrow-buffer = "53.4.0"
# arrow-data = "53.4.0"
# arrow-arith = "53.4.0"
# arrow-cast = "53.4.0"
# arrow-csv = "53.4.0"
# arrow-ipc = "53.4.0"
# arrow-json = "53.4.0"
# arrow-ord = "53.4.0"
# arrow-row = "53.4.0"
# arrow-select = "53.4.0"
# arrow-string = "53.4.0"
# arrow-schema = "53.4.0"
# parquet = "53.4.0"
# DataFusion compatible with arrow 53.4.0
# datafusion = "43.0.0"
# datafusion-common = "43.0.0"
# datafusion-expr = "43.0.0"
# datafusion-physical-expr = "43.0.0"
# datafusion-physical-plan = "43.0.0"
# datafusion-optimizer = "43.0.0"
# datafusion-sql = "43.0.0"

# WebSocket support for GraphQL subscriptions
tokio-tungstenite = "0.28"
futures-util = "0.3"
futures = "0.3"

# Rand and numerical computing now provided by scirs2-core
# Direct rand and ndarray usage removed per SciRS2 integration policy
# Use scirs2-core::random and scirs2-core::ndarray_ext instead

# SciRS2 dependencies (Scientific Computing Library) - Using 0.1.1 from crates.io
# Note: scirs2 meta crate removed - we only use specific sub-crates as needed
scirs2-core = { version = "0.1.2", features = ["random"] }
scirs2-linalg = { version = "0.1.2" }
scirs2-stats = { version = "0.1.2" }
scirs2-neural = { version = "0.1.2" }
scirs2-graph = { version = "0.1.2" }
scirs2-metrics = { version = "0.1.2" }
scirs2-fft = { version = "0.1.2" }
scirs2-signal = { version = "0.1.2" }
scirs2-optimize = { version = "0.1.2" }
scirs2-cluster = { version = "0.1.2" }
scirs2-text = { version = "0.1.2" }
# array! macro is now in scirs2-core, scirs2-autograd not needed

# OxiCode - modern binary serialization (replaces bincode per COOLJAPAN Policy)
oxicode = { version = "0.1.1", features = ["serde", "derive"] }

# System utilities
num_cpus = "1.17"
url = { version = "2.5", features = ["serde"] }
rayon = "1.10"
once_cell = "1.21"
sysinfo = "0.33"  # System information for memory/CPU monitoring
regex = "1.12.2"
urlencoding = "2.1.3"
fastrand = "2.3.0"

# Compression libraries
flate2 = "1.1"     # Gzip compression
zstd = "0.13"      # Zstandard compression
lz4_flex = "0.12"  # LZ4 compression
snap = "1.1"       # Snappy compression
brotli = "8.0"     # Brotli compression

# Geospatial libraries (GeoSPARQL support)
geo = "0.29"       # Geospatial algorithms
rstar = "0.12"     # R*-tree spatial indexing
geojson = "0.24"   # GeoJSON serialization
wkt = "0.14"       # Well-Known Text parsing

# Caching
redis = { version = "0.27.6", features = ["async-std-comp"] }
lru = "0.16.3"

# Cryptography
sha2 = { version = "0.10.9", features = ["oid"] }
hmac = "0.12.1"
hex = "0.4.3"
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
multibase = "0.9"
bs58 = "0.5"

# Graph algorithms (GraphRAG)
petgraph = "0.8"

# Phase D: Industrial Connectivity Dependencies
tokio-serial = "5.4"      # Modbus RTU serial port support
socketcan = "3.5"         # Linux CAN interface
bit-vec = "0.8"           # Bit manipulation for Gorilla compression
arrow = "57"              # Apache Arrow for zero-copy Python integration
deadpool = "0.12"         # Generic async connection pooling
humantime-serde = "1.1"   # Human-readable duration serialization

# WASM support
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Performance"] }
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"

# OpenTelemetry for observability
opentelemetry = { version = "0.31", features = ["trace", "metrics"] }
opentelemetry-jaeger = { version = "0.22", features = ["collector_client", "rt-tokio"] }  # Deprecated, latest version
opentelemetry-otlp = { version = "0.31", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "rt-tokio"] }
opentelemetry-semantic-conventions = "0.31"

[workspace.metadata.docs.rs]
# Note: Individual crates override with [package.metadata.docs.rs] to exclude
# features with system dependencies (rdkafka, lmdb, kube, etc.)
# See individual crate Cargo.toml files for specific exclusions
rustdoc-args = ["--cfg", "docsrs"]

# Feature flags to keep optional dependencies out of default builds

# ============================================================================
# Build Profiles - Optimized for CUDA environments to reduce disk usage
# ============================================================================

[profile.dev]
incremental = true
debug = 1                      # Reduced from 2 (less debug info, smaller binaries)
split-debuginfo = "packed"     # Linux: separate debug info into .dwo files

[profile.dev.package."*"]
debug = 0                      # No debug info for dependencies (major space savings)

[profile.dev.build-override]
opt-level = 0
debug = false                  # No debug info for build scripts

[profile.test]
incremental = true
debug = 1
split-debuginfo = "packed"

[profile.test.package."*"]
debug = 0

# Release profile optimizations
[profile.release]
lto = "thin"                   # Link-time optimization (smaller binaries)
codegen-units = 1              # Better optimization
strip = "symbols"              # Strip symbols from release binaries
